@@ -173,6 +173,7 @@ CREATE TABLE sessions (
   uid integer NOT NULL,
   token bytea NOT NULL,
   expiration timestamptz NOT NULL DEFAULT (now() + '1 year'::interval),
+  lastused timestamptz NOT NULL DEFAULT NOW(),
   PRIMARY KEY (uid, token)
 );
 
